--- a/readme
+++ b/readme
@@ -11,3 +11,6 @@ run this
 
 python3 -m venv .venv
 source .venv/bin/activate
+
+
+python3 DynamicHandler.py --url 'https://fa-etan-dev14-saasfademo1.ds-fa.oraclepdemos.com' --username 'Casey.Brown' --password 'Ne2?4eW*'
